--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: #000000f3;
 }
 .to-do{
-    
     background-color: #212121;
     color: #ffffff;
     padding: 20px;
@@ -35,6 +35,7 @@ h1{
 }
 .input{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 5px;
@@ -57,12 +58,15 @@ h1{
     }
 }
 .add-btn{
-    padding: 13px;
+    margin-top: 10px;
+    width: 83%;
+    padding: 12px;
     background-color: #4caf50;
     color: #ffffff;
     border: none;
-    
+    font-weight: 600;
     border-radius: 5px;
+    font-family: "Poppins", sans-serif;
     cursor: pointer;
     transition: background-color 0.3s ease;
     &:hover{
@@ -78,7 +82,7 @@ h1{
     list-style:none;
     padding: 0;
     margin: 20px;
-    max-height: 200px;
+   
 
     &>li{
         font-weight: 600;
@@ -110,16 +114,14 @@ h1{
 
     }
 }
-@media screen and (max-width: 1060px){
-    .input{
-        flex-direction: column;
-    }
+@media screen and (max-width: 1100px){
+   
    .add-btn{
     margin-top: 10px;
     width: 85%;
  
    }
     #taskList{
-        max-height: none;
+        /* max-height: none; */
     }
 }
